[package]
name = "redox_event"
version = "0.3.0"
description = "A Rust library to use Redox I/O events"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/event"
documentation = "https://docs.rs/redox_event"
edition = "2021"

[lib]
name = "event"
path = "src/lib.rs"

[dependencies]
libredox = "0.0.4"
redox_syscall = "0.4"
bitflags = "2"
