[package]
name = "redox_event"
version = "0.4.0"
description = "A Rust library to use Redox I/O events"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/event"
documentation = "https://docs.rs/redox_event"
edition = "2021"

[lib]
name = "event"
path = "src/lib.rs"

[dependencies]
libredox = { version = "0.1.2", default-features = false }
redox_syscall = { version = "0.5", optional = true }
bitflags = "2"

[features]
default = ["wrappers"]
wrappers = []
