[package]
name = "redox_event"
version = "0.4.7"
description = "A Rust library to use Redox I/O events"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/event"
documentation = "https://docs.rs/redox_event"
edition = "2021"

[lib]
name = "event"
path = "src/lib.rs"

[dependencies]
libredox = { git = "https://gitlab.redox-os.org/Ibuki.O/libredox.git", branch = "relpathat", default-features = false, features = ["base"] }
redox_syscall = { git = "https://gitlab.redox-os.org/Ibuki.O/syscall.git", branch = "call-two-fds", optional = true }
bitflags = "2"

[features]
default = ["wrappers"]
wrappers = []
